 * Fix: Allow input fields to scroll horizontally in Safari iOS (Thibaud Colas)
 * Fix: Ensure screen readers are made aware of page level messages added dynamically to the top of the page (Paarth Agarwal)
 * Fix: Fix `updatemodulepaths` command for Python 3.7 (Matt Westcott)
 * Fix: Only show locale filter in choosers when i18n is enabled in settings (Matt Westcott)


3.0.2 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 * Fix: Ensure string representation of `FormSubmission` returns a string (LB (Ben Johnston))
 * Fix: Fix `updatemodulepaths` command for Python 3.7 (Matt Westcott)


3.0.1 (16.06.2022)
~~~~~~~~~~~~~~~~~~

 * Add warning when `WAGTAILADMIN_BASE_URL` is not configured (Matt Westcott)
 * Fix: Ensure `TabbedInterface` will not show a tab if no panels are visible due to permissions (Paarth Agarwal)
 * Fix: Specific snippets list language picker was not properly styled (Sage Abdullah)
 * Fix: Ensure the upgrade notification request for the latest release, which can be disabled via the `WAGTAIL_ENABLE_UPDATE_CHECK` sends the referrer origin with `strict-origin-when-cross-origin` (Karl Hobley)
 * Fix: Fix misaligned spinner icon on page action button (LB (Ben Johnston))
 * Fix: Ensure radio buttons / checkboxes display vertically under Django 4.0 (Matt Westcott)
 * Fix: Prevent failures when splitting blocks at the start or end of a block, or with highlighted text (Jacob Topp-Mugglestone)
 * Fix: Allow scheduled publishing to complete when the initial editor did not have publish permission (Matt Westcott)
 * Fix: Stop emails from breaking when `WAGTAILADMIN_BASE_URL` is absent due to the request object not being available (Matt Westcott)
 * Fix: Make try/except on sending email less broad so that legitimate template rendering errors are exposed (Matt Westcott)


3.0 (16.05.2022)
~~~~~~~~~~~~~~~~
