@@ -236,6 +236,7 @@ The bulk of these enhancements have been from Paarth Agarwal, who has been doing
  * Ensure screen readers are made aware of page level messages added dynamically to the top of the page (Paarth Agarwal)
  * Fix `updatemodulepaths` command for Python 3.7 (Matt Westcott)
  * Only show locale filter in choosers when i18n is enabled in settings (Matt Westcott)
+ * Ensure that the live preview panel correctly clears the cache when a new page is created (Sage Abdullah)
 
 
 ## Upgrade considerations
